@@ -24,9 +24,9 @@ import static org.openmetadata.schema.api.teams.CreateTeam.TeamType.DIVISION;
 import static org.openmetadata.schema.api.teams.CreateTeam.TeamType.GROUP;
 import static org.openmetadata.schema.api.teams.CreateTeam.TeamType.ORGANIZATION;
 import static org.openmetadata.schema.type.Include.ALL;
+import static org.openmetadata.schema.type.Include.NON_DELETED;
 import static org.openmetadata.service.Entity.ADMIN_USER_NAME;
 import static org.openmetadata.service.Entity.FIELD_DOMAIN;
-import static org.openmetadata.service.Entity.FIELD_OWNER;
 import static org.openmetadata.service.Entity.ORGANIZATION_NAME;
 import static org.openmetadata.service.Entity.POLICY;
 import static org.openmetadata.service.Entity.ROLE;
@@ -41,21 +41,22 @@ import static org.openmetadata.service.exception.CatalogExceptionMessage.invalid
 import static org.openmetadata.service.exception.CatalogExceptionMessage.invalidParent;
 import static org.openmetadata.service.exception.CatalogExceptionMessage.invalidParentCount;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
-import javax.ws.rs.core.UriInfo;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.csv.CSVPrinter;
 import org.apache.commons.csv.CSVRecord;
+import org.jdbi.v3.sqlobject.transaction.Transaction;
 import org.openmetadata.common.utils.CommonUtil;
 import org.openmetadata.csv.EntityCsv;
 import org.openmetadata.schema.api.teams.CreateTeam.TeamType;
@@ -64,65 +65,82 @@ import org.openmetadata.schema.entity.teams.TeamHierarchy;
 import org.openmetadata.schema.type.EntityReference;
 import org.openmetadata.schema.type.Include;
 import org.openmetadata.schema.type.Relationship;
+import org.openmetadata.schema.type.api.BulkAssets;
+import org.openmetadata.schema.type.api.BulkOperationResult;
 import org.openmetadata.schema.type.csv.CsvDocumentation;
 import org.openmetadata.schema.type.csv.CsvErrorType;
+import org.openmetadata.schema.type.csv.CsvFile;
 import org.openmetadata.schema.type.csv.CsvHeader;
 import org.openmetadata.schema.type.csv.CsvImportResult;
-import org.openmetadata.schema.utils.EntityInterfaceUtil;
 import org.openmetadata.service.Entity;
 import org.openmetadata.service.exception.EntityNotFoundException;
 import org.openmetadata.service.jdbi3.CollectionDAO.EntityRelationshipRecord;
 import org.openmetadata.service.resources.teams.TeamResource;
-import org.openmetadata.service.security.policyevaluator.SubjectCache;
+import org.openmetadata.service.security.policyevaluator.SubjectContext;
 import org.openmetadata.service.util.EntityUtil;
 import org.openmetadata.service.util.EntityUtil.Fields;
-import org.openmetadata.service.util.JsonUtils;
 import org.openmetadata.service.util.ResultList;
 
 @Slf4j
 public class TeamRepository extends EntityRepository<Team> {
   static final String PARENTS_FIELD = "parents";
-  static final String TEAM_UPDATE_FIELDS = "profile,users,defaultRoles,parents,children,policies,teamType,email";
-  static final String TEAM_PATCH_FIELDS = "profile,users,defaultRoles,parents,children,policies,teamType,email";
+  static final String TEAM_UPDATE_FIELDS =
+      "profile,users,defaultRoles,parents,children,policies,teamType,email";
+  static final String TEAM_PATCH_FIELDS =
+      "profile,users,defaultRoles,parents,children,policies,teamType,email";
   private static final String DEFAULT_ROLES = "defaultRoles";
   private Team organization = null;
 
-  public TeamRepository(CollectionDAO dao) {
-    super(TeamResource.COLLECTION_PATH, TEAM, Team.class, dao.teamDAO(), dao, TEAM_PATCH_FIELDS, TEAM_UPDATE_FIELDS);
+  public TeamRepository() {
+    super(
+        TeamResource.COLLECTION_PATH,
+        TEAM,
+        Team.class,
+        Entity.getCollectionDAO().teamDAO(),
+        TEAM_PATCH_FIELDS,
+        TEAM_UPDATE_FIELDS);
+    this.quoteFqn = true;
+    supportsSearch = true;
   }
 
   @Override
-  public Team setFields(Team team, Fields fields) throws IOException {
-    if (!fields.contains("profile")) {
-      team.setProfile(null); // Clear the profile attribute, if it was not requested
-    }
-    team.setUsers(fields.contains("users") ? getUsers(team) : null);
-    team.setOwns(fields.contains("owns") ? getOwns(team) : null);
-    team.setDefaultRoles(fields.contains(DEFAULT_ROLES) ? getDefaultRoles(team) : null);
-    team.setInheritedRoles(fields.contains(DEFAULT_ROLES) ? getInheritedRoles(team) : null);
-    team.setOwner(fields.contains(FIELD_OWNER) ? getOwner(team) : null);
-    team.setParents(fields.contains(PARENTS_FIELD) ? getParents(team) : null);
-    team.setChildren(fields.contains("children") ? getChildren(team.getId()) : null);
-    team.setPolicies(fields.contains("policies") ? getPolicies(team) : null);
-    team.setChildrenCount(fields.contains("childrenCount") ? getChildrenCount(team) : null);
-    team.setUserCount(fields.contains("userCount") ? getUserCount(team.getId()) : null);
-    return team;
+  public void setFields(Team team, Fields fields) {
+    team.setUsers(fields.contains("users") ? getUsers(team) : team.getUsers());
+    team.setOwns(fields.contains("owns") ? getOwns(team) : team.getOwns());
+    team.setDefaultRoles(
+        fields.contains(DEFAULT_ROLES) ? getDefaultRoles(team) : team.getDefaultRoles());
+    team.setInheritedRoles(
+        fields.contains(DEFAULT_ROLES) ? getInheritedRoles(team) : team.getInheritedRoles());
+    team.setParents(fields.contains(PARENTS_FIELD) ? getParents(team) : team.getParents());
+    team.setPolicies(fields.contains("policies") ? getPolicies(team) : team.getPolicies());
+    team.setChildrenCount(
+        fields.contains("childrenCount") ? getChildrenCount(team) : team.getChildrenCount());
+    team.setUserCount(
+        fields.contains("userCount") ? getUserCount(team.getId()) : team.getUserCount());
   }
 
   @Override
-  public Team getByName(UriInfo uriInfo, String name, Fields fields) throws IOException {
-    return super.getByName(uriInfo, EntityInterfaceUtil.quoteName(name), fields);
+  public void clearFields(Team team, Fields fields) {
+    team.setProfile(fields.contains("profile") ? team.getProfile() : null);
+    team.setUsers(fields.contains("users") ? team.getUsers() : null);
+    team.setOwns(fields.contains("owns") ? team.getOwns() : null);
+    team.setDefaultRoles(fields.contains(DEFAULT_ROLES) ? team.getDefaultRoles() : null);
+    team.setInheritedRoles(fields.contains(DEFAULT_ROLES) ? team.getInheritedRoles() : null);
+    team.setParents(fields.contains(PARENTS_FIELD) ? team.getParents() : null);
+    team.setPolicies(fields.contains("policies") ? team.getPolicies() : null);
+    team.setChildrenCount(fields.contains("childrenCount") ? team.getChildrenCount() : null);
+    team.withUserCount(fields.contains("userCount") ? team.getUserCount() : null);
   }
 
   @Override
   public void restorePatchAttributes(Team original, Team updated) {
     // Patch can't make changes to following fields. Ignore the changes
-    updated.withName(original.getName()).withId(original.getId());
+    super.restorePatchAttributes(original, updated);
     updated.withInheritedRoles(original.getInheritedRoles());
   }
 
   @Override
-  public void prepare(Team team) throws IOException {
+  public void prepare(Team team, boolean update) {
     populateParents(team); // Validate parents
     populateChildren(team); // Validate children
     validateUsers(team.getUsers());
@@ -130,28 +148,59 @@ public class TeamRepository extends EntityRepository<Team> {
     validatePolicies(team.getPolicies());
   }
 
+  public BulkOperationResult bulkAddAssets(String domainName, BulkAssets request) {
+    Team team = getByName(null, domainName, getFields("id"));
+
+    // Validate all to be users
+    validateAllRefUsers(request.getAssets());
+
+    for (EntityReference asset : request.getAssets()) {
+      if (!Objects.equals(asset.getType(), Entity.USER)) {
+        throw new IllegalArgumentException("Only users can be added to a Team");
+      }
+    }
+
+    return bulkAssetsOperation(team.getId(), TEAM, Relationship.HAS, request, true);
+  }
+
+  public BulkOperationResult bulkRemoveAssets(String domainName, BulkAssets request) {
+    Team team = getByName(null, domainName, getFields("id"));
+
+    // Validate all to be users
+    validateAllRefUsers(request.getAssets());
+
+    return bulkAssetsOperation(team.getId(), TEAM, Relationship.HAS, request, false);
+  }
+
+  private void validateAllRefUsers(List<EntityReference> refs) {
+    for (EntityReference asset : refs) {
+      if (!Objects.equals(asset.getType(), Entity.USER)) {
+        throw new IllegalArgumentException("Only users can be added to a Team");
+      }
+    }
+  }
+
   @Override
-  public void storeEntity(Team team, boolean update) throws IOException {
+  public void storeEntity(Team team, boolean update) {
     // Relationships and fields such as href are derived and not stored as part of json
     List<EntityReference> users = team.getUsers();
     List<EntityReference> defaultRoles = team.getDefaultRoles();
     List<EntityReference> parents = team.getParents();
-    List<EntityReference> children = team.getChildren();
     List<EntityReference> policies = team.getPolicies();
 
     // Don't store users, defaultRoles, href as JSON. Build it on the fly based on relationships
-    team.withUsers(null).withDefaultRoles(null).withInheritedRoles(null);
+    team.withUsers(null)
+        .withDefaultRoles(null)
+        .withParents(null)
+        .withPolicies(null)
+        .withInheritedRoles(null);
 
     store(team, update);
-    if (update) {
-      SubjectCache.getInstance().invalidateTeam(team.getId());
-    }
 
     // Restore the relationships
     team.withUsers(users)
         .withDefaultRoles(defaultRoles)
         .withParents(parents)
-        .withChildren(children)
         .withPolicies(policies);
   }
 
@@ -165,7 +214,8 @@ public class TeamRepository extends EntityRepository<Team> {
     }
     for (EntityReference parent : listOrEmpty(team.getParents())) {
       if (parent.getId().equals(organization.getId())) {
-        continue; // When the parent is the default parent - organization, don't store the relationship
+        continue; // When the parent is the default parent - organization, don't store the
+        // relationship
       }
       addRelationship(parent.getId(), team.getId(), TEAM, TEAM, Relationship.PARENT_OF);
     }
@@ -178,17 +228,17 @@ public class TeamRepository extends EntityRepository<Team> {
   }
 
   @Override
-  public Team setInheritedFields(Team team, Fields fields) throws IOException {
+  public void setInheritedFields(Team team, Fields fields) {
     // If user does not have domain, then inherit it from parent Team
     // TODO have default team when a user belongs to multiple teams
     if (fields.contains(FIELD_DOMAIN) && team.getDomain() == null) {
-      List<EntityReference> parents = !fields.contains(PARENTS_FIELD) ? getParents(team) : team.getParents();
+      List<EntityReference> parents =
+          !fields.contains(PARENTS_FIELD) ? getParents(team) : team.getParents();
       if (!nullOrEmpty(parents)) {
         Team parent = Entity.getEntity(TEAM, parents.get(0).getId(), "domain", ALL);
-        team.withDomain(parent.getDomain());
+        inheritDomain(team, fields, parent);
       }
     }
-    return team;
   }
 
   @Override
@@ -197,26 +247,27 @@ public class TeamRepository extends EntityRepository<Team> {
   }
 
   @Override
-  protected void preDelete(Team entity) {
+  protected void preDelete(Team entity, String deletedBy) {
     if (entity.getId().equals(organization.getId())) {
       throw new IllegalArgumentException(DELETE_ORGANIZATION);
     }
   }
 
   @Override
-  protected void cleanup(Team team) throws IOException {
-    // When a parent team is deleted, if the children team don't have a parent, set Organization as the parent
-    getParents(team);
+  protected void cleanup(Team team) {
+    // When a team is deleted, if the children team don't have another parent, set Organization as
+    // the parent
     for (EntityReference child : listOrEmpty(team.getChildren())) {
-      Team childTeam = dao.findEntityById(child.getId());
+      Team childTeam = find(child.getId(), NON_DELETED);
       getParents(childTeam);
-      if (childTeam.getParents().size() == 1) { // Only parent is being deleted, move the parent to Organization
-        addRelationship(organization.getId(), childTeam.getId(), TEAM, TEAM, Relationship.PARENT_OF);
+      if (childTeam.getParents().size()
+          == 1) { // Only parent is being deleted, move the parent to Organization
+        addRelationship(
+            organization.getId(), childTeam.getId(), TEAM, TEAM, Relationship.PARENT_OF);
         LOG.info("Moving parent of team " + childTeam.getId() + " to organization");
       }
     }
     super.cleanup(team);
-    SubjectCache.getInstance().invalidateTeam(team.getId());
   }
 
   @Override
@@ -226,14 +277,15 @@ public class TeamRepository extends EntityRepository<Team> {
   }
 
   @Override
-  public CsvImportResult importFromCsv(String name, String csv, boolean dryRun, String user) throws IOException {
+  public CsvImportResult importFromCsv(String name, String csv, boolean dryRun, String user)
+      throws IOException {
     Team team = getByName(null, name, Fields.EMPTY_FIELDS); // Validate team name
     TeamCsv teamCsv = new TeamCsv(team, user);
     return teamCsv.importCsv(csv, dryRun);
   }
 
-  private List<EntityReference> getInheritedRoles(Team team) throws IOException {
-    return SubjectCache.getInstance().getRolesForTeams(getParentsForInheritedRoles(team));
+  private List<EntityReference> getInheritedRoles(Team team) {
+    return SubjectContext.getRolesForTeams(getParentsForInheritedRoles(team));
   }
 
   private TeamHierarchy getTeamHierarchy(Team team) {
@@ -245,7 +297,8 @@ public class TeamRepository extends EntityRepository<Team> {
         .withHref(team.getHref())
         .withFullyQualifiedName(team.getFullyQualifiedName())
         .withIsJoinable(team.getIsJoinable())
-        .withChildren(null);
+        .withChildren(null)
+        .withDescription(team.getDescription());
   }
 
   private TeamHierarchy deepCopy(TeamHierarchy team) {
@@ -290,7 +343,7 @@ public class TeamRepository extends EntityRepository<Team> {
     return team1;
   }
 
-  public List<TeamHierarchy> listHierarchy(ListFilter filter, int limit, Boolean isJoinable) throws IOException {
+  public List<TeamHierarchy> listHierarchy(ListFilter filter, int limit, Boolean isJoinable) {
     Fields fields = getFields(PARENTS_FIELD);
     Map<UUID, TeamHierarchy> map = new HashMap<>();
     ResultList<Team> resultList = listAfter(null, fields, filter, limit, null);
@@ -299,7 +352,7 @@ public class TeamRepository extends EntityRepository<Team> {
         allTeams.stream()
             .filter(Boolean.TRUE.equals(isJoinable) ? Team::getIsJoinable : t -> true)
             .filter(t -> !t.getName().equals(ORGANIZATION_NAME))
-            .collect(Collectors.toList());
+            .toList();
     // build hierarchy of joinable teams
     joinableTeams.forEach(
         team -> {
@@ -314,7 +367,8 @@ public class TeamRepository extends EntityRepository<Team> {
                     .filter(t -> t.getId().equals(parentRef.getId()))
                     .findFirst()
                     .orElseThrow(() -> new IllegalArgumentException(TEAM_HIERARCHY));
-            currentHierarchy = getTeamHierarchy(parent).withChildren(new ArrayList<>(List.of(currentHierarchy)));
+            currentHierarchy =
+                getTeamHierarchy(parent).withChildren(new ArrayList<>(List.of(currentHierarchy)));
             if (map.containsKey(parent.getId())) {
               TeamHierarchy parentTeam = map.get(parent.getId());
               currentHierarchy = mergeTrees(parentTeam, currentHierarchy);
@@ -337,13 +391,13 @@ public class TeamRepository extends EntityRepository<Team> {
     return new ArrayList<>(map.values());
   }
 
-  private List<EntityReference> getUsers(Team team) throws IOException {
-    List<EntityRelationshipRecord> userIds = findTo(team.getId(), TEAM, Relationship.HAS, Entity.USER);
-    return EntityUtil.populateEntityReferences(userIds, Entity.USER);
+  private List<EntityReference> getUsers(Team team) {
+    return findTo(team.getId(), TEAM, Relationship.HAS, Entity.USER);
   }
 
-  private List<EntityRelationshipRecord> getUsersRelationshipRecords(UUID teamId) throws IOException {
-    List<EntityRelationshipRecord> userRecord = findTo(teamId, TEAM, Relationship.HAS, Entity.USER);
+  private List<EntityRelationshipRecord> getUsersRelationshipRecords(UUID teamId) {
+    List<EntityRelationshipRecord> userRecord =
+        findToRecords(teamId, TEAM, Relationship.HAS, Entity.USER);
     List<EntityReference> children = getChildren(teamId);
     for (EntityReference child : children) {
       userRecord.addAll(getUsersRelationshipRecords(child.getId()));
@@ -351,7 +405,7 @@ public class TeamRepository extends EntityRepository<Team> {
     return userRecord;
   }
 
-  private Integer getUserCount(UUID teamId) throws IOException {
+  private Integer getUserCount(UUID teamId) {
     List<String> userIds = new ArrayList<>();
     List<EntityRelationshipRecord> userRecordList = getUsersRelationshipRecords(teamId);
     for (EntityRelationshipRecord userRecord : userRecordList) {
@@ -363,58 +417,62 @@ public class TeamRepository extends EntityRepository<Team> {
     return userIds.size();
   }
 
-  private List<EntityReference> getOwns(Team team) throws IOException {
+  private List<EntityReference> getOwns(Team team) {
     // Compile entities owned by the team
-    return EntityUtil.getEntityReferences(
-        daoCollection.relationshipDAO().findTo(team.getId().toString(), TEAM, Relationship.OWNS.ordinal()));
+    return findTo(team.getId(), TEAM, Relationship.OWNS, null);
   }
 
-  private List<EntityReference> getDefaultRoles(Team team) throws IOException {
-    List<EntityRelationshipRecord> defaultRoleIds = findTo(team.getId(), TEAM, Relationship.HAS, Entity.ROLE);
-    return EntityUtil.populateEntityReferences(defaultRoleIds, Entity.ROLE);
+  private List<EntityReference> getDefaultRoles(Team team) {
+    return findTo(team.getId(), TEAM, Relationship.HAS, Entity.ROLE);
   }
 
-  private List<EntityReference> getParents(Team team) throws IOException {
-    List<EntityRelationshipRecord> relationshipRecords = findFrom(team.getId(), TEAM, Relationship.PARENT_OF, TEAM);
-    List<EntityReference> parents = EntityUtil.populateEntityReferences(relationshipRecords, TEAM);
-    if (organization != null && listOrEmpty(parents).isEmpty() && !team.getId().equals(organization.getId())) {
+  private List<EntityReference> getParents(Team team) {
+    List<EntityReference> parents = findFrom(team.getId(), TEAM, Relationship.PARENT_OF, TEAM);
+    if (organization != null
+        && listOrEmpty(parents).isEmpty()
+        && !team.getId().equals(organization.getId())) {
       return new ArrayList<>(List.of(organization.getEntityReference()));
     }
     return parents;
   }
 
-  private List<EntityReference> getParentsForInheritedRoles(Team team) throws IOException {
-    List<EntityRelationshipRecord> relationshipRecords = findFrom(team.getId(), TEAM, Relationship.PARENT_OF, TEAM);
+  private List<EntityReference> getParentsForInheritedRoles(Team team) {
     // filter out any deleted teams
     List<EntityReference> parents =
-        EntityUtil.populateEntityReferences(relationshipRecords, TEAM).stream()
+        findFrom(team.getId(), TEAM, Relationship.PARENT_OF, TEAM).stream()
             .filter(e -> !e.getDeleted())
             .collect(Collectors.toList());
-    if (organization != null && listOrEmpty(parents).isEmpty() && !team.getId().equals(organization.getId())) {
+    if (organization != null
+        && listOrEmpty(parents).isEmpty()
+        && !team.getId().equals(organization.getId())) {
       return new ArrayList<>(List.of(organization.getEntityReference()));
     }
     return parents;
   }
 
-  private List<EntityReference> getChildren(UUID teamId) throws IOException {
-    if (teamId.equals(organization.getId())) { // For organization all the parentless teams are children
-      List<String> children = daoCollection.teamDAO().listTeamsUnderOrganization(teamId.toString());
-      return EntityUtil.populateEntityReferencesById(EntityUtil.toIDs(children), Entity.TEAM);
+  @Override
+  protected List<EntityReference> getChildren(Team team) {
+    return getChildren(team.getId());
+  }
+
+  protected List<EntityReference> getChildren(UUID teamId) {
+    if (teamId.equals(
+        organization.getId())) { // For organization all the parentless teams are children
+      List<String> children = daoCollection.teamDAO().listTeamsUnderOrganization(teamId);
+      return EntityUtil.populateEntityReferencesById(EntityUtil.strToIds(children), Entity.TEAM);
     }
-    List<EntityRelationshipRecord> children = findTo(teamId, TEAM, Relationship.PARENT_OF, TEAM);
-    return EntityUtil.populateEntityReferences(children, TEAM);
+    return findTo(teamId, TEAM, Relationship.PARENT_OF, TEAM);
   }
 
-  private Integer getChildrenCount(Team team) throws IOException {
-    return getChildren(team.getId()).size();
+  private Integer getChildrenCount(Team team) {
+    return !nullOrEmpty(team.getChildren()) ? team.getChildren().size() : getChildren(team).size();
   }
 
-  private List<EntityReference> getPolicies(Team team) throws IOException {
-    List<EntityRelationshipRecord> policies = findTo(team.getId(), TEAM, Relationship.HAS, POLICY);
-    return EntityUtil.populateEntityReferences(policies, POLICY);
+  private List<EntityReference> getPolicies(Team team) {
+    return findTo(team.getId(), TEAM, Relationship.HAS, POLICY);
   }
 
-  private void populateChildren(Team team) throws IOException {
+  private void populateChildren(Team team) {
     List<EntityReference> childrenRefs = team.getChildren();
     if (childrenRefs == null) {
       return;
@@ -432,15 +490,14 @@ public class TeamRepository extends EntityRepository<Team> {
       case DIVISION:
         validateChildren(team, children, DEPARTMENT, DIVISION, GROUP);
         break;
-      case BUSINESS_UNIT:
-      case ORGANIZATION:
+      case BUSINESS_UNIT, ORGANIZATION:
         validateChildren(team, children, BUSINESS_UNIT, DIVISION, DEPARTMENT, GROUP);
         break;
     }
     populateTeamRefs(childrenRefs, children);
   }
 
-  private void populateParents(Team team) throws IOException {
+  private void populateParents(Team team) {
     // Teams created without parents has the top Organization as the default parent
     List<EntityReference> parentRefs = listOrEmpty(team.getParents());
 
@@ -452,8 +509,7 @@ public class TeamRepository extends EntityRepository<Team> {
     }
     List<Team> parents = getTeams(parentRefs);
     switch (team.getTeamType()) {
-      case GROUP:
-      case DEPARTMENT:
+      case GROUP, DEPARTMENT:
         validateParents(team, parents, DEPARTMENT, DIVISION, BUSINESS_UNIT, ORGANIZATION);
         break;
       case DIVISION:
@@ -479,17 +535,17 @@ public class TeamRepository extends EntityRepository<Team> {
     }
   }
 
-  private List<Team> getTeams(List<EntityReference> teamRefs) throws IOException {
+  private List<Team> getTeams(List<EntityReference> teamRefs) {
     List<Team> teams = new ArrayList<>();
     for (EntityReference teamRef : teamRefs) {
       try {
-        Team team = dao.findEntityById(teamRef.getId());
+        Team team = find(teamRef.getId(), NON_DELETED);
         teams.add(team);
       } catch (EntityNotFoundException ex) {
         // Team was soft-deleted
         LOG.debug("Failed to populate team since it might be soft deleted.", ex);
         // Ensure that the team was soft-deleted otherwise throw an exception
-        dao.findEntityById(teamRef.getId(), Include.DELETED);
+        find(teamRef.getId(), Include.DELETED);
       }
     }
     return teams;
@@ -500,7 +556,8 @@ public class TeamRepository extends EntityRepository<Team> {
     List<TeamType> allowed = Arrays.asList(allowedTeamTypes);
     for (Team relatedTeam : relatedTeams) {
       if (!allowed.contains(relatedTeam.getTeamType())) {
-        throw new IllegalArgumentException(invalidParent(relatedTeam, team.getName(), team.getTeamType()));
+        throw new IllegalArgumentException(
+            invalidParent(relatedTeam, team.getName(), team.getTeamType()));
       }
     }
   }
@@ -521,14 +578,16 @@ public class TeamRepository extends EntityRepository<Team> {
     }
   }
 
-  public void initOrganization() throws IOException {
-    String json = dao.findJsonByFqn(ORGANIZATION_NAME, Include.ALL);
-    if (json == null) {
+  public void initOrganization() {
+    organization = findByNameOrNull(ORGANIZATION_NAME, ALL);
+    if (organization == null) {
       LOG.debug("Organization {} is not initialized", ORGANIZATION_NAME);
       // Teams
       try {
-        EntityReference organizationPolicy = Entity.getEntityReferenceByName(POLICY, "OrganizationPolicy", Include.ALL);
-        EntityReference dataConsumerRole = Entity.getEntityReferenceByName(ROLE, "DataConsumer", Include.ALL);
+        EntityReference organizationPolicy =
+            Entity.getEntityReferenceByName(POLICY, "OrganizationPolicy", Include.ALL);
+        EntityReference dataConsumerRole =
+            Entity.getEntityReferenceByName(ROLE, "DataConsumer", Include.ALL);
         Team team =
             new Team()
                 .withId(UUID.randomUUID())
@@ -541,13 +600,15 @@ public class TeamRepository extends EntityRepository<Team> {
                 .withPolicies(new ArrayList<>(List.of(organizationPolicy)))
                 .withDefaultRoles(new ArrayList<>(List.of(dataConsumerRole)));
         organization = create(null, team);
-        LOG.info("Organization {}:{} is successfully initialized", ORGANIZATION_NAME, organization.getId());
+        LOG.info(
+            "Organization {}:{} is successfully initialized",
+            ORGANIZATION_NAME,
+            organization.getId());
       } catch (Exception e) {
         LOG.error("Failed to initialize organization", e);
         throw e;
       }
     } else {
-      organization = JsonUtils.readValue(json, Team.class);
       LOG.info("Organization is already initialized");
     }
   }
@@ -563,44 +624,30 @@ public class TeamRepository extends EntityRepository<Team> {
     }
 
     @Override
-    protected Team toEntity(CSVPrinter printer, CSVRecord csvRecord) throws IOException {
+    protected void createEntity(CSVPrinter printer, Iterator<CSVRecord> csvRecords)
+        throws IOException {
+      CSVRecord csvRecord = getNextRecord(printer, csvRecords);
       // Field 1, 2, 3, 4, 7 - name, displayName, description, teamType, isJoinable
-      Team importedTeam =
+      Team team =
           new Team()
               .withName(csvRecord.get(0))
               .withDisplayName(csvRecord.get(1))
               .withDescription(csvRecord.get(2))
               .withTeamType(TeamType.fromValue(csvRecord.get(3)))
-              .withIsJoinable(getBoolean(printer, csvRecord, 6));
+              .withOwner(getOwnerAsUser(printer, csvRecord, 5))
+              .withIsJoinable(getBoolean(printer, csvRecord, 6))
+              .withDefaultRoles(getEntityReferences(printer, csvRecord, 7, ROLE))
+              .withPolicies(getEntityReferences(printer, csvRecord, 8, POLICY));
 
       // Field 5 - parent teams
-      getParents(printer, csvRecord, importedTeam);
-      if (!processRecord) {
-        return null;
+      getParents(printer, csvRecord, team);
+      if (processRecord) {
+        createEntity(printer, csvRecord, team);
       }
-
-      // Field 6 - Owner
-      importedTeam.setOwner(getOwnerAsUser(printer, csvRecord, 5));
-      if (!processRecord) {
-        return null;
-      }
-
-      // Field 8 - defaultRoles
-      importedTeam.setDefaultRoles(getEntityReferences(printer, csvRecord, 7, ROLE));
-      if (!processRecord) {
-        return null;
-      }
-
-      // Field 9 - policies
-      importedTeam.setPolicies(getEntityReferences(printer, csvRecord, 8, POLICY));
-      if (!processRecord) {
-        return null;
-      }
-      return importedTeam;
     }
 
     @Override
-    protected List<String> toRecord(Team entity) {
+    protected void addRecord(CsvFile csvFile, Team entity) {
       List<String> recordList = new ArrayList<>();
       addField(recordList, entity.getName());
       addField(recordList, entity.getDisplayName());
@@ -611,40 +658,53 @@ public class TeamRepository extends EntityRepository<Team> {
       addField(recordList, entity.getIsJoinable());
       addEntityReferences(recordList, entity.getDefaultRoles());
       addEntityReferences(recordList, entity.getPolicies());
-      return recordList;
+      addRecord(csvFile, recordList);
     }
 
-    private void getParents(CSVPrinter printer, CSVRecord csvRecord, Team importedTeam) throws IOException {
-      List<EntityReference> parentRefs = getUserOrTeamEntityReferences(printer, csvRecord, 4, Entity.TEAM);
+    private void getParents(CSVPrinter printer, CSVRecord csvRecord, Team importedTeam)
+        throws IOException {
+      if (!processRecord) {
+        return;
+      }
+      List<EntityReference> parentRefs = getEntityReferences(printer, csvRecord, 4, Entity.TEAM);
 
-      // Validate team being created is under the hierarchy of the team for which CSV is being imported to
+      // Validate team being created is under the hierarchy of the team for which CSV is being
+      // imported to
       for (EntityReference parentRef : listOrEmpty(parentRefs)) {
         if (parentRef.getName().equals(team.getName())) {
-          continue; // Parent is same as the team to which CSV is being imported, then it is in the same hierarchy
+          continue; // Parent is same as the team to which CSV is being imported, then it is in the
+          // same hierarchy
         }
         if (dryRunCreatedEntities.get(parentRef.getName()) != null) {
           continue; // Parent is being created by CSV import
         }
         // Else the parent should already exist
-        if (!SubjectCache.getInstance().isInTeam(team.getName(), parentRef)) {
+        if (!SubjectContext.isInTeam(team.getName(), parentRef)) {
           importFailure(
-              printer, invalidTeam(4, team.getName(), importedTeam.getName(), parentRef.getName()), csvRecord);
+              printer,
+              invalidTeam(4, team.getName(), importedTeam.getName(), parentRef.getName()),
+              csvRecord);
           processRecord = false;
         }
       }
       importedTeam.setParents(parentRefs);
     }
 
-    public static String invalidTeam(int field, String team, String importedTeam, String parentName) {
+    public static String invalidTeam(
+        int field, String team, String importedTeam, String parentName) {
       String error =
-          String.format("Parent %s of imported team %s is not under %s team hierarchy", parentName, importedTeam, team);
-      return String.format("#%s: Field %d error - %s", CsvErrorType.INVALID_FIELD, field + 1, error);
+          String.format(
+              "Parent %s of imported team %s is not under %s team hierarchy",
+              parentName, importedTeam, team);
+      return String.format(
+          "#%s: Field %d error - %s", CsvErrorType.INVALID_FIELD, field + 1, error);
     }
 
-    private List<Team> listTeams(TeamRepository repository, String parentTeam, List<Team> teams, Fields fields)
-        throws IOException {
+    private List<Team> listTeams(
+        TeamRepository repository, String parentTeam, List<Team> teams, Fields fields) {
       // Export the entire hierarchy of teams
-      final ListFilter filter = new ListFilter(Include.NON_DELETED).addQueryParam("parentTeam", parentTeam);
+      final ListFilter filter =
+          new ListFilter(Include.NON_DELETED).addQueryParam("parentTeam", parentTeam);
       List<Team> list = repository.listAll(fields, filter);
       if (nullOrEmpty(list)) {
         return teams;
@@ -669,8 +729,9 @@ public class TeamRepository extends EntityRepository<Team> {
       super(original, updated, operation);
     }
 
+    @Transaction
     @Override
-    public void entitySpecificUpdate() throws IOException {
+    public void entitySpecificUpdate() {
       if (original.getTeamType() != updated.getTeamType()) {
         // A team of type 'Group' cannot be updated
         if (GROUP.equals(original.getTeamType())) {
@@ -681,7 +742,7 @@ public class TeamRepository extends EntityRepository<Team> {
           throw new IllegalArgumentException(INVALID_GROUP_TEAM_CHILDREN_UPDATE);
         }
       }
-      recordChange("profile", original.getProfile(), updated.getProfile());
+      recordChange("profile", original.getProfile(), updated.getProfile(), true);
       recordChange("isJoinable", original.getIsJoinable(), updated.getIsJoinable());
       recordChange("teamType", original.getTeamType(), updated.getTeamType());
       // If the team is empty then email should be null, not be empty
@@ -696,14 +757,21 @@ public class TeamRepository extends EntityRepository<Team> {
       updatePolicies(original, updated);
     }
 
-    private void updateUsers(Team origTeam, Team updatedTeam) throws JsonProcessingException {
+    private void updateUsers(Team origTeam, Team updatedTeam) {
       List<EntityReference> origUsers = listOrEmpty(origTeam.getUsers());
       List<EntityReference> updatedUsers = listOrEmpty(updatedTeam.getUsers());
       updateToRelationships(
-          "users", TEAM, origTeam.getId(), Relationship.HAS, Entity.USER, origUsers, updatedUsers, false);
+          "users",
+          TEAM,
+          origTeam.getId(),
+          Relationship.HAS,
+          Entity.USER,
+          origUsers,
+          updatedUsers,
+          false);
     }
 
-    private void updateDefaultRoles(Team origTeam, Team updatedTeam) throws JsonProcessingException {
+    private void updateDefaultRoles(Team origTeam, Team updatedTeam) {
       List<EntityReference> origDefaultRoles = listOrEmpty(origTeam.getDefaultRoles());
       List<EntityReference> updatedDefaultRoles = listOrEmpty(updatedTeam.getDefaultRoles());
       updateToRelationships(
@@ -717,25 +785,45 @@ public class TeamRepository extends EntityRepository<Team> {
           false);
     }
 
-    private void updateParents(Team original, Team updated) throws JsonProcessingException {
+    private void updateParents(Team original, Team updated) {
       List<EntityReference> origParents = listOrEmpty(original.getParents());
       List<EntityReference> updatedParents = listOrEmpty(updated.getParents());
       updateFromRelationships(
-          PARENTS_FIELD, TEAM, origParents, updatedParents, Relationship.PARENT_OF, TEAM, original.getId());
+          PARENTS_FIELD,
+          TEAM,
+          origParents,
+          updatedParents,
+          Relationship.PARENT_OF,
+          TEAM,
+          original.getId());
     }
 
-    private void updateChildren(Team original, Team updated) throws JsonProcessingException {
+    private void updateChildren(Team original, Team updated) {
       List<EntityReference> origParents = listOrEmpty(original.getChildren());
       List<EntityReference> updatedParents = listOrEmpty(updated.getChildren());
       updateToRelationships(
-          "children", TEAM, original.getId(), Relationship.PARENT_OF, TEAM, origParents, updatedParents, false);
+          "children",
+          TEAM,
+          original.getId(),
+          Relationship.PARENT_OF,
+          TEAM,
+          origParents,
+          updatedParents,
+          false);
     }
 
-    private void updatePolicies(Team original, Team updated) throws JsonProcessingException {
+    private void updatePolicies(Team original, Team updated) {
       List<EntityReference> origPolicies = listOrEmpty(original.getPolicies());
       List<EntityReference> updatedPolicies = listOrEmpty(updated.getPolicies());
       updateToRelationships(
-          "policies", TEAM, original.getId(), Relationship.HAS, POLICY, origPolicies, updatedPolicies, false);
+          "policies",
+          TEAM,
+          original.getId(),
+          Relationship.HAS,
+          POLICY,
+          origPolicies,
+          updatedPolicies,
+          false);
     }
   }
 }
